--- a/templates/admin/activity.html
+++ b/templates/admin/activity.html
@@ -8,7 +8,7 @@
                 <i class="fa fa-home"></i><a href="/">Dashboard</a>
             </li>
             <li>
-                <a href="{% url "users.views.admin_list_users" %}"><i class="fa fa-book"> </i> Administration</a>
+                <a href="{% url "users.views.admin_list_users" %}"><i class="fa fa-lock"> </i> Administration</a>
             </li>
             <li class="active">
                 Activity
