--- a/templates/analyses/report/_ela.html
+++ b/templates/analyses/report/_ela.html
@@ -1,7 +1,10 @@
-<ul class="nav nav-pills" id="tab-stat">
-    <li class="active">
-        <a>ELA</a>
-    </li>
-</ul>
+<div class="box">
+    <ul class="nav nav-pills" id="tab-stat">
+        <li class="active">
+            <a>ELA</a>
+        </li>
+    </ul>
+</div>
+
 {% include 'analyses/report/_staticEla.html' %}
 
