--- a/templates/analyses/report/_map.html
+++ b/templates/analyses/report/_map.html
@@ -1,7 +1,9 @@
-<ul class="nav nav-pills" id="tab-stat">
-    <li class="active">
-        <a data-toggle="tab" href="#mapdiv">GPS Localization</a>
-    </li>
-</ul>
+<div class="box">
+    <ul class="nav nav-pills" id="tab-stat">
+        <li class="active">
+            <a data-toggle="tab" href="#mapdiv">GPS Localization</a>
+        </li>
+    </ul>
+</div>
 
 {% include 'analyses/report/_staticMap.html' %}
