--- a/templates/admin/_list_activity.html
+++ b/templates/admin/_list_activity.html
@@ -31,7 +31,7 @@
 
 <script type="text/javascript">
     $('.datatables').dataTable({
-        "sDom" : '<"top"fl>rt<"bottom"p><"clear">',
+        "sDom" : '<"top"f>rt<"bottom"p><"clear">',
         "aaSorting": [[ 0, "desc" ]],
         "language": {
             "search": "_INPUT_"
