--- a/templates/analyses/cases/_tbl_case.html
+++ b/templates/analyses/cases/_tbl_case.html
@@ -324,7 +324,8 @@
                 </div>
             {% else %}
                 <div class="alert">
-                    <strong>Warning!</strong> there are not any photos.
+                    <span class="fa fa-info-circle"></span>
+                    <strong>Info!</strong> there are not any photos.
                 </div>
             {% endif %}
     {% elif pagename == "map" %}
