--- a/templates/analyses/report/_exif.html
+++ b/templates/analyses/report/_exif.html
@@ -1,17 +1,13 @@
-<div class="box-tab corner-all">
-    <div class="box-header corner-top">
-        <ul class="nav nav-pills" id="tab-stat">
-            <li class="active">
-                <a data-toggle="tab" href="#system-metadata">Exif Metadata</a>
-            </li>
-        </ul>
-    </div>
-    <div class="box-body">
+<div class="box">
+    <ul class="nav nav-pills" id="tab-stat">
+        <li class="active">
+            <a data-toggle="tab" href="#system-metadata">Exif Metadata</a>
+        </li>
+    </ul>
+    <div class="box">
         <div class="tab-content">
             <div class="tab-pane fade in active" id="system-metadata">
-                <div class="row-fluid">
-                    {% include 'analyses/report/_staticExif.html' %}
-                </div>
+                {% include 'analyses/report/_staticExif.html' %}
             </div>
         </div>
     </div>
