--- a/templates/analyses/report/_signature.html
+++ b/templates/analyses/report/_signature.html
@@ -1,70 +1,58 @@
 {% load analyses_tags %}
-<div class="box-tab corner-all">
-    <div class="box-header corner-top">
-        <ul class="nav nav-pills" id="tab-stat">
-            <li class="active">
-                <a data-toggle="tab" href="#system-signature"><span class="badge">All</span></a>
+<div class="box">
+    <ul class="nav nav-pills" id="tab-stat">
+        <li class="active">
+            <a data-toggle="tab" href="#system-signature"><span class="badge">All</span></a>
+        </li>
+        {# Show only severities present. #}
+        {% if analysis.report.signatures|has_severity:"3" %}
+            <li>
+                <a data-toggle="tab" href="#high-signature"><span class="label label-danger label-round">High</span></a>
             </li>
-            {# Show only severities present. #}
-            {% if analysis.report.signatures|has_severity:"3" %}
-                <li>
-                    <a data-toggle="tab" href="#high-signature"><span class="badge badge-important">High</span></a>
-                </li>
-            {% endif %}
-            {% if analysis.report.signatures|has_severity:"2" %}
-                <li>
-                    <a data-toggle="tab" href="#medium-signature"><span class="badge badge-warning">Medium</span></a>
-                </li>
-            {% endif %}
-            {% if analysis.report.signatures|has_severity:"1" %}
-                <li>
-                    <a data-toggle="tab" href="#low-signature"><span class="badge badge-success">Low</span></a>
-                </li>
-            {% endif %}
-        </ul>
-    </div>
-    <div class="box-body">
+        {% endif %}
+        {% if analysis.report.signatures|has_severity:"2" %}
+            <li>
+                <a data-toggle="tab" href="#medium-signature"><span class="label label-warning label-round">Medium</span></a>
+            </li>
+        {% endif %}
+        {% if analysis.report.signatures|has_severity:"1" %}
+            <li>
+                <a data-toggle="tab" href="#low-signature"><span class="label label-success label-round">Low</span></a>
+            </li>
+        {% endif %}
+    </ul>
+    <div class="box">
         <div class="tab-content">
             <div class="tab-pane fade in active" id="system-signature">
-                <div class="row-fluid">
-                    <div class="accordion" id="sign-accordion">
-                        {% for sign in analysis.report.signatures %}
-                            {% include "analyses/report/_signatures_table.html" %}
-                        {% endfor %}
-                    </div>
-                </div>
+                    {% for sign in analysis.report.signatures %}
+                        {% include "analyses/report/_signatures_table.html" %}
+                    {% endfor %}
             </div>
             <div class="tab-pane fade" id="high-signature">
-                <div class="row-fluid">
-                    <div class="accordion" id="sign3-accordion">
-                        {% for sign in analysis.report.signatures %}
-                            {% if sign.severity == 3 %}
-                                {% include "analyses/report/_signatures_table.html" with segment=3 %}
-                            {% endif %}
-                        {% endfor %}
-                    </div>
+                <div class="accordion" id="sign3-accordion">
+                    {% for sign in analysis.report.signatures %}
+                        {% if sign.severity == 3 %}
+                            {% include "analyses/report/_signatures_table.html" with segment=3 %}
+                        {% endif %}
+                    {% endfor %}
                 </div>
             </div>
             <div class="tab-pane fade" id="medium-signature">
-                <div class="row-fluid">
-                    <div class="accordion" id="sign2-accordion">
-                        {% for sign in analysis.report.signatures %}
-                            {% if sign.severity == 2 %}
-                                {% include "analyses/report/_signatures_table.html" with segment=2 %}
-                            {% endif %}
-                        {% endfor %}
-                    </div>
+                <div class="accordion" id="sign2-accordion">
+                    {% for sign in analysis.report.signatures %}
+                        {% if sign.severity == 2 %}
+                            {% include "analyses/report/_signatures_table.html" with segment=2 %}
+                        {% endif %}
+                    {% endfor %}
                 </div>
             </div>
             <div class="tab-pane fade" id="low-signature">
-                <div class="row-fluid">
-                    <div class="accordion" id="sign1-accordion">
-                        {% for sign in analysis.report.signatures %}
-                            {% if sign.severity == 1 %}
-                                {% include "analyses/report/_signatures_table.html" with segment=1 %}
-                            {% endif %}
-                        {% endfor %}
-                    </div>
+                <div class="accordion" id="sign1-accordion">
+                    {% for sign in analysis.report.signatures %}
+                        {% if sign.severity == 1 %}
+                            {% include "analyses/report/_signatures_table.html" with segment=1 %}
+                        {% endif %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
