--- a/templates/layout/_modalActionCase.html
+++ b/templates/layout/_modalActionCase.html
@@ -34,24 +34,20 @@
     </div>
 </div>
 
-<div id="deleteReport" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-            ×
-        </button>
-        <h3>Delete the report</h3>
-    </div>
-    <div class="modal-body">
-        <p>
-            Are you sure continue?
-        </p>
-    </div>
-    <div class="modal-footer">
-        <a class="btn btn-danger" id="id-delete-report">
-            Delete
-        </a>
-        <button class="btn" data-dismiss="modal" aria-hidden="true">
-            Cancel
-        </button>
+<div class="modal fade" id="deleteReport" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Delete the report</h4>
+            </div>
+            <div class="modal-body">
+                Are you sure continue?
+            </div>
+            <div class="modal-footer">
+                <a type="button" class="btn btn-danger" id="id-delete-report">Delete</a>
+                <a type="button" class="btn btn-default" data-dismiss="modal">Cancel</a>
+            </div>
+        </div>
     </div>
 </div>
