--- a/templates/analyses/cases/_thum_image.html
+++ b/templates/analyses/cases/_thum_image.html
@@ -11,22 +11,22 @@
                     <div class="tags">
                         {% if image.report.signatures|count_severity:"1" %}
                             <span class="label-holder">
-                                <span class="label label-success">{{ image.report.signatures|count_severity:"1" }}</span>
+                                <span class="label label-success label-round">{{ image.report.signatures|count_severity:"1" }}</span>
                             </span>
                         {% endif %}
                         {% if image.report.signatures|count_severity:"2" %}
                             <span class="label-holder">
-                                <span class="label label-warning">{{ image.report.signatures|count_severity:"2" }}</span>
+                                <span class="label label-warning label-round">{{ image.report.signatures|count_severity:"2" }}</span>
                             </span>
                         {% endif %}
                         {% if image.report.signatures|count_severity:"3" %}
                             <span class="label-holder">
-                                <span class="label label-important">{{ image.report.signatures|count_severity:"3" }}</span>
+                                <span class="label label-danger label-round">{{ image.report.signatures|count_severity:"3" }}</span>
                             </span>
                         {% endif %}
                     </div>
                     <div class="icns">
-                        <a href="{% url "analyses.views.show_analysis" image.id %}" title="Show report"> <i class="icon-list-alt"> </i></a>
+                        <a href="{% url "analyses.views.show_analysis" image.id %}" title="Show report"> <i class="icon icon-list-alt"> </i></a>
                         {% if image.favorites.all %}
                             <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite btn-warning star{{image.id}}" title="Un-set as favorite"> <i class="icon icon-star"> </i></a>
                         {% else %}
@@ -48,7 +48,6 @@
 
 <script>
     $(document).ready(function(){
-        //Examples of how to assign the Colorbox event to elements
         $(".group1").colorbox({rel:'group1'});
     });
 </script>
