--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -12,7 +12,7 @@
 
      <div class="content">
         <div class="page-h1">
-            <h1>Administration <small>modify </small></h1>
+            <h1>Administration: <small>user management </small></h1>
         </div>
         <div class="col-md-12">
             <div class="wdgt">
