--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
     <div class="cntnr">
         {% include "layout/_sidebar.html" %}
         {% block content %}{% endblock %}
+        <div id="footer">
+            <small class="pull-right"><strong>Ghiro 0.3-dev - &copy;</strong> With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://burlone.info/">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" class="hide"><span class="badge badge-success">New version available</span></a></small>
+        </div>
     </div>
 </body>
 </html>
