--- a/templates/hashes/new.html
+++ b/templates/hashes/new.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-12">
             <div class="wdgt">
-                <div class="wdgt-header">Complete the hash</div>
+                <div class="wdgt-header">Complete the following form for to create a new hash list</div>
                 <div class="wdgt-body">
                     <form action="{% url "hashes.views.new_hashes" %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
                         <div class="form-group form-inline">
