--- a/templates/layout/_searchForm.html
+++ b/templates/layout/_searchForm.html
@@ -7,7 +7,7 @@
             <a href="#location" data-toggle="tab">Location</a>
         </li>
     </ul>
-    <div class="tab-content">
+    <div class="tab-content table">
         {% if error%}
             <div class="alert alert-danger box">
                 <b>Error</b>: {{ error }}
