Changed analyses waiting icon

--- a/templates/layout/_sidebar.html
+++ b/templates/layout/_sidebar.html
@@ -58,7 +58,7 @@
             <ul class="nav nav-pills hidden-xs">
                 <li><a href="{% url "analyses.views.list_cases" %}"><span class="fa fa-briefcase"></span>Open cases <span class="label label-primary">{{ open_cases_count }}</span></a></li>
                 <li><a><span class="fa fa-book"></span>Analyses completed <span class="label label-success">{{ analyses_complete_count }}</span></a></li>
-                <li><a><span class="fa fa-times"></span>Analyses waiting <span class="label label-warning">{{ analyses_wait_count }}</span></a></li>
+                <li><a><span class="fa fa-clock-o"></span>Analyses waiting <span class="label label-warning">{{ analyses_wait_count }}</span></a></li>
             </ul>
             <div class="hov">
                 <div class="btn-group">
