Modified edit user page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,6 +230,10 @@ border-top-left-radius: 0;
     color:red;
 }
 
+/* CUSTOM PROFILE */
+
+
+
 /* CUSTOM FOOTER */
 #footer {
     padding: 50px 20px 0 90px;
